--- a/README.adoc
+++ b/README.adoc
@@ -1,31 +1,11 @@
-= Asciidoctor
-Ryan Waldron, Dan Allen
+= Test
 
-http://asciidoctor.org[Asciidoctor] is a native Ruby processor
-for converting AsciiDoc source files and strings into HTML 5,
-DocBook 4.5 and other formats.
+This is a test repo with http://asciidoctor.org[Asciidoctor] docs.
 
 == Installation
 
-You can install the Asciidoctor RubyGem using the +gem+ command:
-
- gem install asciidoctor
-
-On Fedora, you can install via an RPM package
-(https://bugzilla.redhat.com/show_bug.cgi?id=889011[pending])
-using the +yum+ command:
-
- yum install rubygem-asciidoctor
-
-Now you are ready to start using Asciidoctor!
+Nothing to install
 
 == Benefits
 
-Asciidoctor is:
-
-* compliant
-* fast
-* secure
-* stable
-
-'Give it a try!'
+Nearly none.
